Adds theJesterRace and LunarStrain html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="grid">
         <article>
             <img src="images/records/Foregone.png" alt="Foregone record" class="article-img">
-            <h3>Foregone</h3>
+            <h3><a href="/records/Foregone.html">Foregone</a></h3>
             <p>text about Foregone</p>
         </article>
         <article>
