--- a/records.html
+++ b/records.html
@@ -89,12 +89,12 @@
         </article>
         <article>
             <img src="images/records/TheJesterRace.png" alt="The Jester Race" class="article-img">
-            <h3>The Jester Race</h3>
+            <h3><a href="/records/theJesterRace.html">The Jester Race</a></h3>
             <p>text The Jester Race</p>
         </article>
         <article>
             <img src="images/records/LunarStrain.png" alt="Lunar Strain" class="article-img">
-            <h3>Lunar Strain</h3>
+            <h3><a href="/records/LunarStrain.html">Lunar Strain</a></h3>
             <p>text Lunar Strain</p>
         </article>
     </section>
