--- a/records/theJesterRace.html
+++ b/records/theJesterRace.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/records/Foregone.png" alt="Foregone record" class="album-cover">
+        <img src="/images/records/TheJesterRace.png" alt="The Jester Race record" class="album-cover">
     </header>
         <nav class="nav-list">
             <ul>
@@ -30,27 +30,27 @@
         </div>
 
         <article>
-            <h1>Foregone</h1>
-                <p>Foregone is the fourteenth studio album by Swedish heavy metal band In Flames. 
-                    The album was released on 10 February 2023 through Nuclear Blast and was produced by Howard Benson. 
-                    It is the first album by the band to feature guitarist Chris Broderick, who replaced Niclas Engelin, and the only to entirely feature drums performed by Tanner Wayne. 
-                    It is also the last album to feature the band's bassist Bryce Paul before he left the band in June 2023.
+            <h1>The Jester Race</h1>
+                <p>The Jester Race is the second studio album by Swedish heavy metal band In Flames, released in February 1996. 
+                    It is the first album to feature Anders Fridén as the band's vocalist, Björn Gelotte as the drummer, and Jester Head as the band's mascot. 
+                    The album was the band's second full-length album released following the more mainstream success of their 1995 EP, Subterranean. 
+                    The Jester Race was recorded at Studio Fredman by Fredrik Nordström, who also contributed keyboards for the album. 
+                    The song "Dead Eternity" was originally on the Subterranean (EP) and the song "Dead God in Me" was also originally on the Subterranean (EP) but with a different title, "The Inborn Lifeless". 
+                    Although, the version on The Jester Race has different lyrics, a different ending, and a slightly different solo.
                 </p>
         </article>
     <h2>Playlist</h2>
     <ul>
-        <li>1. The Beginning of All Things That Will End</li>
-        <li>2. State of Slow Decay</li>
-        <li>3. Meet Your Maker</li>
-        <li>4. Bleeding Out</li>
-        <li>5. Foregone, Pt. 1</li>
-        <li>6. Foregone, Pt. 2</li>
-        <li>7. Pure Light of Mind</li>
-        <li>8. The Great Deceiver</li>
-        <li>9. In the Dark</li>
-        <li>10. A Dialogue in B Flat Minor</li>
-        <li>11. Cynosure</li>
-        <li>12. End the Transmission</li>
+        <li>1. Moonshield</li>
+        <li>2. The Jester's Dance</li>
+        <li>3. Artifacts of the Black Rain</li>
+        <li>4. Graveland</li>
+        <li>5. Lord Hypnos</li>
+        <li>6. Dead Eternity</li>
+        <li>7. The Jester Race</li>
+        <li>8. December Flower</li>
+        <li>9. Wayfaerer</li>
+        <li>10. Dead God in Me</li>
     </ul>
     </main>
     <script src="/js/stars.js"></script>
