Moves playlist data from html to Json

--- a/index.html
+++ b/index.html
@@ -40,5 +40,21 @@
         </article>
     </section>
     </main>
+
+    <footer>
+        <h3>Sign up to our newsletter to keep up with the latest from InFlames</h3>
+        <form id="signUp">
+            <label for="txtEmail">Email: </label>
+            <input type="text" id="txtEmail">
+            <label for="txtPassword">Password: </label>
+            <input type="password" id="txtPassword">
+            
+            <input type="submit" value="Spara" id="save" ></p>
+            
+            <p id="output"></p>
+        </form>
+        <button onclick="toggleFunction()">Sign up</button>
+    </footer>
+    <script src="/js/form.js"></script>
 </body>
 </html>
