--- a/records/ASenseOfPurpose.html
+++ b/records/ASenseOfPurpose.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="A Sense of Purpose">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -39,21 +39,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. The Mirror's Truth</li>
-        <li>2. Disconnected</li>
-        <li>3. Sleepless Again</li>
-        <li>4. Alias</li>
-        <li>5. I'm the Highway</li>
-        <li>6. Delight and Angers</li>
-        <li>7. Move Through Me</li>
-        <li>8. The Chosen Pessimist</li>
-        <li>9. Sober and Irrelevant</li>
-        <li>10. Condemned</li>
-        <li>11. Drenched in Fear</li>
-        <li>12. March to the Shore</li>
+    <ul id="playlist">
+       
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
