--- a/records/Clayman.html
+++ b/records/Clayman.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Clayman">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -42,20 +42,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Bullet Ride</li>
-        <li>2. Pinball Map</li>
-        <li>3. Only for the Weak</li>
-        <li>4. ...As the Future Repeats Today</li>
-        <li>5. Square Nothing</li>
-        <li>6. Clayman</li>
-        <li>7. Satellites and Astronauts</li>
-        <li>8. Brush the Dust Away</li>
-        <li>9. Swim</li>
-        <li>10. Suburban Me</li>
-        <li>11. Another Day in Quicksand</li>
+    <ul id="playlist">
+        
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
