--- a/records/Colony.html
+++ b/records/Colony.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Colony">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -40,20 +40,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Embody the Invisible</li>
-        <li>2. Ordinary Story</li>
-        <li>3. Scorn</li>
-        <li>4. Colony</li>
-        <li>5. Zombie Inc</li>
-        <li>6. Pallar Anders Visa</li>
-        <li>7. Coerced Coexistence</li>
-        <li>8. Resin</li>
-        <li>9. Behind Space '99</li>
-        <li>10. Insipid 2000</li>
-        <li>11. The New Word</li>
+    <ul id="playlist">
+       
     </ul>
     </main>
+    <script src="/js/fetch.js"></script>
     <script src="/js/stars.js"></script>
 </body>
 </html>
