--- a/records/ITheMask.html
+++ b/records/ITheMask.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="I, the Mask">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -40,21 +40,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Voices</li>
-        <li>2. I, the Mask</li>
-        <li>3. Call My Name</li>
-        <li>4. I Am Above</li>
-        <li>5. Follow Me</li>
-        <li>6. (This Is Our) House</li>
-        <li>7. We Will Remember</li>
-        <li>8. In This Life</li>
-        <li>9. Burn</li>
-        <li>10. Deep Inside</li>
-        <li>11. All the Pain</li>
-        <li>12. Stay with Me</li>
+    <ul id="playlist">
+       
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
