--- a/records/LunarStrain.html
+++ b/records/LunarStrain.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Lunar Strain">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -41,19 +41,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Behind Space</li>
-        <li>2. Lunar Strain</li>
-        <li>3. Starforsaken</li>
-        <li>4. Dreamscape</li>
-        <li>5. Everlost (Part I)</li>
-        <li>6. Everlost (Part II)</li>
-        <li>7. Hårgalåten</li>
-        <li>8. In Flames</li>
-        <li>9. Upon an Oaken Throne</li>
-        <li>10. Clad in Shadows</li>
+    <ul id="playlist">
+        
     </ul>
     </main>
+    <script src="/js/fetch.js"></script>
     <script src="/js/stars.js"></script>
 </body>
 </html>
