--- a/records/RerouteToRemain.html
+++ b/records/RerouteToRemain.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Reroute to Remain">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -39,23 +39,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Reroute to Remain</li>
-        <li>2. System</li>
-        <li>3. Drifter</li>
-        <li>4. Trigger</li>
-        <li>5. Cloud Connected</li>
-        <li>6. Dawn of a New Day</li>
-        <li>7. Egonomic</li>
-        <li>8. Minus</li>
-        <li>9. Dismiss the Cynics</li>
-        <li>10. Free Fall</li>
-        <li>11. Dark Signs</li>
-        <li>12. Metaphor</li>
-        <li>13. Black & White</li>
-
+    <ul id="playlist">
+        
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
