--- a/records/SirenCharm.html
+++ b/records/SirenCharm.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Siren Charms">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -41,21 +41,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. In Plain View</li>
-        <li>2. Everything's Gone</li>
-        <li>3. Paralyzed</li>
-        <li>4. Through Oblivion</li>
-        <li>5. With Eyes Wide Open</li>
-        <li>6. Siren Charms</li>
-        <li>7. When the World Explodes</li>
-        <li>8. Rusted Nail</li>
-        <li>9. Dead Eyes</li>
-        <li>10. Monsters in the Ballroom</li>
-        <li>11. Filtered Truth</li>
-        <li>12. The Chase</li>
+    <ul id="playlist">
+        
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 </body>
 </html>
