--- a/records/SoundsOfAPlaygroundFading.html
+++ b/records/SoundsOfAPlaygroundFading.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/records/SoundOfPlaygroundFading.png" alt="Sounda Of Playground Fading record" class="album-cover">
+        <img src="/images/records/SoundOfPlaygroundFading.png" alt="Sounds of Playground Fading record" class="album-cover">
     </header>
         <nav class="nav-list">
             <ul>
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Sounds of Playground Fading">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -37,22 +37,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Sounds of a Playground Fading</li>
-        <li>2. Deliver Us</li>
-        <li>3. All for Me</li>
-        <li>4. The Puzzle</li>
-        <li>5. Fear Is the Weakness</li>
-        <li>6. Where the Dead Ships Dwell</li>
-        <li>7. The Attic</li>
-        <li>8. Darker Times</li>
-        <li>9. Ropes</li>
-        <li>10. Enter Tragedy</li>
-        <li>11. Jester's Door</li>
-        <li>12. A New Dawn</li>
-        <li>13. Liberation</li>
+    <ul id="playlist">
+       
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 </body>
 </html>
