--- a/records/SoundtrackToYourEscape.html
+++ b/records/SoundtrackToYourEscape.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Soundtrack to Your Escape">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -39,21 +39,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. F(r)iend</li>
-        <li>2. The Quiet Place</li>
-        <li>3. Dead Alone</li>
-        <li>4. Touch of Red</li>
-        <li>5. Like You Better Dead</li>
-        <li>6. My Sweet Shadow</li>
-        <li>7. Evil in a Closet</li>
-        <li>8. In Search for I</li>
-        <li>9. Borders and Shading</li>
-        <li>10. Superhero of the Computer Rage</li>
-        <li>11. Dial 595-Escape</li>
-        <li>12. Bottled</li>
+    <ul id="playlist">
+        
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 </body>
 </html>
