--- a/records/theJesterRace.html
+++ b/records/theJesterRace.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="The Jester Race">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -40,19 +40,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Moonshield</li>
-        <li>2. The Jester's Dance</li>
-        <li>3. Artifacts of the Black Rain</li>
-        <li>4. Graveland</li>
-        <li>5. Lord Hypnos</li>
-        <li>6. Dead Eternity</li>
-        <li>7. The Jester Race</li>
-        <li>8. December Flower</li>
-        <li>9. Wayfaerer</li>
-        <li>10. Dead God in Me</li>
+    <ul id="playlist">
+        
     </ul>
     </main>
+    <script src="/js/fetch.js"></script>
     <script src="/js/stars.js"></script>
 </body>
 </html>
