--- a/records/whoracle.html
+++ b/records/whoracle.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Whoracle">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -42,20 +42,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Jotun</li>
-        <li>2. Food for the Gods</li>
-        <li>3. Gyroscope</li>
-        <li>4. Dialogue with the Stars</li>
-        <li>5. The Hive</li>
-        <li>6. Jester Script Transfigured</li>
-        <li>7. Morphing into Primal</li>
-        <li>8. Worlds Within the Margin</li>
-        <li>9. Episode 666</li>
-        <li>10. Everything Counts</li>
-        <li>11. Whoracle</li>
+    <ul id="playlist">
+       
     </ul>
     </main>
+    <script src="/js/fetch.js"></script>
     <script src="/js/stars.js"></script>
 </body>
 </html>
