--- a/records/Battles.html
+++ b/records/Battles.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Battles">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -38,21 +38,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Drained</li>
-        <li>2. The End</li>
-        <li>3. Like Sand</li>
-        <li>4. The Truth</li>
-        <li>5. In My Room</li>
-        <li>6. Before I Fall</li>
-        <li>7. Through My Eyes</li>
-        <li>8. Battles</li>
-        <li>9. Here Until Forever</li>
-        <li>10. Underneath My Skin</li>
-        <li>11. Wallflower</li>
-        <li>12. Save Me</li>
+    <ul id="playlist">
+       
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
