--- a/records/Foregone.html
+++ b/records/Foregone.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Foregone">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -38,7 +38,8 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
+    <ul id="playlist">
+        <!-- 
         <li>1. The Beginning of All Things That Will End</li>
         <li>2. State of Slow Decay</li>
         <li>3. Meet Your Maker</li>
@@ -51,8 +52,10 @@
         <li>10. A Dialogue in B Flat Minor</li>
         <li>11. Cynosure</li>
         <li>12. End the Transmission</li>
+    -->
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
