--- a/records/comeClarity.html
+++ b/records/comeClarity.html
@@ -19,7 +19,7 @@
                 <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
-    <main>
+    <main data-record="Come Clarity">
         <div class="card"> 
             <span onclick="gfg(1)" class="star">★</span>
             <span onclick="gfg(2)" class="star">★</span>
@@ -40,22 +40,11 @@
                 </p>
         </article>
     <h2>Playlist</h2>
-    <ul>
-        <li>1. Take This Life</li>
-        <li>2. Leeches</li>
-        <li>3. Reflect the Storm</li>
-        <li>4. Dead End</li>
-        <li>5. Scream</li>
-        <li>6. Come Clarity</li>
-        <li>7. Vacuum</li>
-        <li>8. Pacing Death's Trail</li>
-        <li>9. Crawl Through Knives</li>
-        <li>10. Versus Terminus</li>
-        <li>11. Our Infinite Struggle</li>
-        <li>12. Vanishing Light</li>
-        <li>13. Your Bedtime Story Is Scaring Everyone</li>
+    <ul id="playlist">
+        
     </ul>
     </main>
+        <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
 </body>
