--- a/index.html
+++ b/index.html
@@ -44,16 +44,19 @@
     <footer>
         <h3>Sign up to our newsletter to keep up with the latest from InFlames</h3>
         <form id="signUp">
-            <label for="txtEmail">Email: </label>
-            <input type="text" id="txtEmail">
-            <label for="txtPassword">Password: </label>
-            <input type="password" id="txtPassword">
-            
-            <input type="submit" value="Spara" id="save" ></p>
-            
+            <div class ="form-group">
+                <label for="txtEmail">Email: </label>
+                <input type="text" id="txtEmail">
+            </div>
+            <div class="form-group">
+                <label for="txtPassword">Password: </label>
+                <input type="password" id="txtPassword">
+            </div>
+
+            <input type="submit" value="Sign up" id="save" >
             <p id="output"></p>
         </form>
-        <button onclick="toggleFunction()">Sign up</button>
+        <button onclick="showForm(this)">Sign up</button>
     </footer>
     <script src="/js/form.js"></script>
 </body>
