--- a/records.html
+++ b/records.html
@@ -16,7 +16,6 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="records.html">Records</a></li>
-                <li><a href="members.html">Members</a></li>
             </ul>
         </nav>
     <main>
@@ -30,72 +29,72 @@
         <article>
             <img src="images/records/Foregone.png" alt="Foregone record" class="article-img">
             <h3><a href="/records/Foregone.html">Foregone</a></h3>
-            <p>text about Foregone</p>
+            <p>Released 2023</p>
         </article>
         <article>
             <img src="images/records/ITheMask.png" alt="I, the Mask record" class="article-img">
             <h3><a href="/records/ITheMask.html">I, the Mask</a></h3>
-            <p>text I, the Mask</p>
+            <p>Released 2019</p>
         </article>
         <article>
             <img src="images/records/Battles.png" alt="Battles record" class="article-img">
             <h3><a href="/records/Battles.html">Battles</a></h3>
-            <p>text Battles</p>
+            <p>Released 2016</p>
         </article>
         <article>
-            <img src="images/records/sirenChamr.png" alt="Siren charms record" class="article-img">
+            <img src="images/records/SirenCharms.png" alt="Siren charms record" class="article-img">
             <h3><a href="/records/SirenCharm.html">Siren charms</a></h3>
-            <p>text Siren charms</p>
+            <p>Released 2014</p>
         </article>
         <article>
             <img src="images/records/SoundOfPlaygroundFading.png" alt="Sounds of a Playground Fading" class="article-img">
             <h3><a href="/records/SoundsOfAPlaygroundFading.html">Sounds of a Playground Fading</a></h3>
-            <p>text Sounds of a Playground Fading</p>
+            <p>Released 2011</p>
         </article>
         <article>
             <img src="images/records/ASenseOfPurpose.png" alt="A Sense of Purpose record" class="article-img">
             <h3><a href="/records/ASenseOfPurpose.html">A Sense of Purpose</a></h3>
-            <p>text A Sense of Purpose</p>
+            <p>Released 2008</p>
         </article>
         <article>
             <img src="images/records/ComeClarity.png" alt="Come Clarity record" class="article-img">
-            <h3><a href="/records/comeClarity.html">Come Clairy</a></h3>
-            <p>text Come Clarity</p>
+            <h3><a href="/records/ComeClarity.html">Come Clarity</a></h3>
+            <p>Released 2006</p>
         </article>
         <article>
             <img src="images/records/SoundtrackToYourEscape.png" alt="Soundtrack to Your Escape record" class="article-img">
             <h3><a href="/records/SoundtrackToYourEscape.html">Soundtrack to Your Escape</a></h3>
-            <p>text Soundtrack to Your Escape</p>
+            <p>Released 2004</p>
         </article>
         <article>
             <img src="images/records/RerouteToRemain.png" alt="Reroute to Remain" class="article-img">
             <h3><a href="/records/RerouteToRemain.html">Reroute to Remain</a></h3>
-            <p>text Reroute to Remain</p>
+            <p>Released 2002</p>
         </article>
         <article>
-            <img src="images/records/clayman.png" alt="Clayman" class="article-img">
+            <img src="images/records/Clayman.png" alt="Clayman" class="article-img">
             <h3><a href="/records/Clayman.html">Clayman</a></h3>
-            <p>text Clayman</p>
+            <p>Released 2000</p>
         </article>
         <article>
             <img src="images/records/Colony.png" alt="Colony" class="article-img">
             <h3><a href="/records/Colony.html">Colony</a></h3>
-            <p>text Colony</p>
+            <p>Released 1999</p>
         </article>
         <article>
-            <img src="images/records/whoracle.png" alt="Whoracle" class="article-img">
-            <h3><a href="/records/whoracle.html">Whoracle</a></h3>
-            <p>text Whoracle</p>
+            <img src="images/records/Whoracle.png" alt="Whoracle" class="article-img">
+            <h3><a href="/records/Whoracle.html">Whoracle</a></h3>
+            <p>Released 1997</p>
         </article>
         <article>
             <img src="images/records/TheJesterRace.png" alt="The Jester Race" class="article-img">
-            <h3><a href="/records/theJesterRace.html">The Jester Race</a></h3>
-            <p>text The Jester Race</p>
+            <h3><a href="/records/TheJesterRace.html">The Jester Race</a></h3>
+            <p>Released 1996</p>
         </article>
         <article>
             <img src="images/records/LunarStrain.png" alt="Lunar Strain" class="article-img">
             <h3><a href="/records/LunarStrain.html">Lunar Strain</a></h3>
-            <p>text Lunar Strain</p>
+            <p>Released 1994</p>
         </article>
     </section>
     </main>
