--- a/records/Clayman.html
+++ b/records/Clayman.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <header>
-        <img src="/images/records/clayman.png" alt="Clayman record" class="album-cover">
+        <img src="/images/records/Clayman.png" alt="Clayman record" class="album-cover">
     </header>
         <nav class="nav-list">
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/records.html">Records</a></li>
-                <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
     <main data-record="Clayman">
@@ -28,6 +27,7 @@
             <span onclick="gfg(5)" class="star">★</span>
             <h3 id="output">Rating is: 0/5</h3>
         </div>
+        <button id="favButton" onclick="toggleFavourite(recordName)">Add/Remove Favourite</button>
 
         <article>
             <h1>Clayman</h1>
@@ -46,6 +46,7 @@
         
     </ul>
     </main>
+        <script src="/js/favourite.js"></script>
         <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 
