--- a/records/SoundsOfAPlaygroundFading.html
+++ b/records/SoundsOfAPlaygroundFading.html
@@ -16,7 +16,6 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/records.html">Records</a></li>
-                <li><a href="/members.html">Members</a></li>
             </ul>
         </nav>
     <main data-record="Sounds of Playground Fading">
@@ -28,6 +27,7 @@
             <span onclick="gfg(5)" class="star">★</span>
             <h3 id="output">Rating is: 0/5</h3>
         </div>
+        <button id="favButton" onclick="toggleFavourite(recordName)">Add/Remove</button>
 
         <article>
             <h1>Sounds of a Playground Fading</h1>
@@ -41,6 +41,7 @@
        
     </ul>
     </main>
+        <script src="/js/favourite.js"></script>
         <script src="/js/fetch.js"></script>
         <script src="/js/stars.js"></script>
 </body>
